--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,14 @@ header {
   font-size: 1.1rem;
 }
 
+a:link {
+  color: white;
+}
+
+a:visited {
+  color: white;
+}
+
 h1 {
   font-size: 4rem;
 }
@@ -28,10 +36,6 @@ ul {
   width: 60%;
 }
 
-#about {
-  width: 20%;
-  background-color: #566E8C;
-}
 
 .grid {
   margin: 0 auto;
@@ -58,25 +62,62 @@ ul {
   height: 200px;
 }
 
-.contact {
-  height: 500px;
+.contact-jumbo {
+  height: 800px;
   display: flex;
   align-items: center;
+  margin-top: -5%;
 }
 
 .img-thumbnail {
   width: 200px;
+  max-height: 250px;
+}
+
+.image-container {
+  margin: 0 auto;
+  width: 60%;
+  display: flex;
+}
+
+.skills-list {
+  margin: 5% auto;
+  width: 80%;
+  height: 100%;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.skill {
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #364659;
+  width: 12rem;
+  height: 2rem;
+  margin: 2%;
+  padding: 2%;
+  border-radius: 4px;
 }
 
 .icon-holder {
-  width: 8rem;
-  height: 8rem;
+  width: 18rem;
+  height: 12rem;
   background-color: #566E8C;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   border-radius: 4px;
+  color: white;
+}
+
+.icon-holder p {
+  padding-top: 10%;
+  font-weight: bold;
 }
 
 svg {
@@ -87,9 +128,15 @@ svg {
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
-  width: 80%;
-  justify-content: space-around;
+  width: 40%;
+  height: 100%;
+  justify-content: space-between;
+  align-items: center;
 
+}
+
+.breadcrumb {
+  width: 50%;
 }
 
 @media(max-width: 500px) {
